# ziptimezone

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  run_tests.py  test_core.py  test_geocode.py
docs/: requirements.txt
docs/source/: 0_getting_started.rst  addon.rst  batch_processor.rst  conf.py  core.rst  data_manager.rst  globals.rst  index.rst  mappings.rst
docs/source/_static/: custom.css
tests/: 1test_batch_processor.py  __init__.py  test_addon.py  test_batch_processor.py  test_core.py  test_data_manager.py  test_geocode.py  test_globals.py
ziptimezone/: __init__.py  addon.py  batch_processor.py  core.py  data_manager.py  geocode.py  globals.py  mappings.py
ziptotimezone/: geocode.py
